Add comprehensive updates including tab counter fix and other improvements
- Fix tab counter updates: resolve ID conflicts and ensure real-time updates
- Include code improvements to app.py, candidate_service.py, and styling
- Add .gitignore to exclude sensitive user data from version control
- Remove all candidate resumes and user decision data from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Environment variables
 .env
 
+# User-specific data (do not commit to version control)
+candidates/
+data/
+
 # Python
 __pycache__/
 *.py[cod]
