Add user-friendly folder structure with README guides
- Create candidates/README.md with clear instructions on resume file naming
- Create data/README.md explaining auto-generated application data
- Update .gitignore to preserve folder structure while excluding sensitive files
- Users now see where to place resumes immediately after cloning

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 .env
 
 # User-specific data (do not commit to version control)
-candidates/
-data/
+candidates/*
+!candidates/README.md
+data/*
+!data/README.md
 
 # Python
 __pycache__/
