--- a/env.example
+++ b/env.example
@@ -1,3 +1,11 @@
 OPENAI_API_KEY=your-openai-key
 OPENAI_DEFAULT_MODEL=gpt-4
-LLM_PROVIDER=openai 
+LLM_PROVIDER=openai
+
+# Resume Processing Configuration
+RESUME_QUICK_TIMEOUT=60
+RESUME_LONG_TIMEOUT=180
+RESUME_MAX_RETRIES=3
+
+# Batch Processing Configuration (set to 1 to disable batching)
+RESUME_BATCH_SIZE=1 
